removed auth for now

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Video Demo</title>
+    <script src="popup.js"></script>
     <style>
       /* Add CSS styles here */
       h1 {
@@ -43,7 +44,7 @@
     <p></p>
     <a href="https://airtable.com/shriPHD0ItZ3kFeDe" target="_blank"
       ><div style="display: flex; justify-content: center;">
-  <button>Feedback</div></button></a
+  <button id="sendFeedback">Feedback</div></button></a
     >
   </body>
 </html>
